--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>SDSRP Events</title>
+    <title>ERLC Billboards Events</title>
 </head>
 <body>
     <div id="events-container"></div>
